<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:clickable="false"
    android:onClick="getByLocationButtonOnClick">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getByLocation_button_name"
            android:id="@+id/getByLocation_button"
            android:onClick="getByLocationButtonOnClick" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getByLocationFull_button_name"
            android:id="@+id/getByLocationFull_button"
            android:onClick="getByLocationFullButtonOnClick" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getByLocationIdentifier_button_name"
            android:id="@+id/getByLocationIdentifier_button"
            android:onClick="getByLocationIdentifierButtonOnClick" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getSpotMap_button_name"
            android:id="@+id/getSpotMap_button"
            android:onClick="getSpotMapButtonOnClick" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getClosestSpots_button_name"
            android:id="@+id/getClosestSpots_button"
            android:onClick="getClosestSpotsButtonOnClick" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getContentList_button_name"
            android:id="@+id/getContentList_button"
            android:onClick="getContentListButtonOnClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/outputTextViewLabel_text"
            android:id="@+id/outputTextViewLabel"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/outputTextView"
                android:background="#ffd0d0d0" />
        </ScrollView>


    </LinearLayout>
</RelativeLayout>
